# screenrecord-open

./: .gitignore  README.md  build-bundled-linux.sh  build-bundled-windows.sh  build-bundled.sh  build.sh  docker-compose.yml  run-built.sh  start-new.sh  stop.sh
.github/workflows/: release-desktop.yaml
screenjournal/apps/desktop/: .gitignore  README.md  next.config.ts  package.json
screenrecord/: .vercel-deploy-trigger  README.md  package-lock.json  package.json  turbo.json
screenrecord/.github/workflows/: release-desktop.yaml  vercel-author-bypass.yaml
screenrecord/apps/desktop/: .env.example  .gitignore  README.md  tailwind.config.ts  tsconfig.json
screenrecord/apps/desktop/src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
screenrecord/apps/desktop/src-tauri/capabilities/: default.json
screenrecord/apps/desktop/src-tauri/resources/: start-bundled.sh
screenrecord/apps/desktop/src-tauri/src/activitywatch/: client.rs  mod.rs  types.rs
screenrecord/apps/desktop/src-tauri/src/collector/: auth.rs  batch.rs  bridge.rs  client.rs  config.rs  formatter.rs  manager.rs  mod.rs  queue.rs  types.rs
screenrecord/apps/desktop/src-tauri/src/recording/: config.rs  manager.rs  storage.rs  types.rs
screenrecord/apps/desktop/src-tauri/src/recording/gemini/: client.rs  formatter.rs  mod.rs  prompt.rs  queue.rs  types.rs
screenrecord/apps/desktop/src-tauri/src/recording/transcription/: formatter.rs  mod.rs  queue.rs  types.rs  whisper.rs
screenrecord/apps/desktop/src-tauri/src/recording/upload/: mixer.rs
screenrecord/apps/desktop/src-tauri/src/services/: manager.rs  mod.rs  types.rs
scripts/: prepare-databases.sh
sj-collector/: CLAUDE.md  LOCAL_SETUP.md  README.md  docker-compose.yml
sj-collector/test-data/: README.md
sj-tracker-chat-agent/: backend_client.py  main.py  requirements.txt  server.py
sj-tracker-frontend/: README.md
sj-tracker-frontend/app/: layout.tsx
sj-tracker-frontend/app/activity/: page.tsx
sj-tracker-frontend/app/audio/: page.tsx
sj-tracker-frontend/components/: Chat.tsx  NavBar.tsx  ReportForm.tsx  ReportLoading.tsx  UserMenu.tsx  WeeklyReportForm.tsx  WeeklyReportLoading.tsx
sj-tracker-frontend/lib/: activityAPI.ts  audioAPI.ts  authAPI.ts  geminiApiKey.ts  localTypes.ts  organisationsAPI.ts  usersAPI.ts  weeklyReportsAPI.ts
sj-tracker-report/: JWT_TOKEN_STRUCTURE.md  README.md  RESEARCH_NOTES.md  TECHNICAL_SPECIFICATION.md  go.mod  go.sum
(+103 files in other folders)
