[package]
name = "Screenrecord"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.91.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }
dotenvy = "0.15"
rand = "0.8"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json", "native-tls", "multipart"] }
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "time",
  "sync",
  "process",
] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.2"
aw-client-rust = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
aw-models = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
chrono = { version = "0.4", features = ["serde"] }

# Screen recording dependencies
scap = { git = "https://github.com/CapSoftware/scap.git", branch = "fix-windows" }  # Cross-platform screen capture with audio support
regex = "1.10"
walkdir = "2.4"
hostname = "0.4"
rand = "0.8"
dirs = "5.0"

# Collector dependencies
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
futures-util = "0.3"

# Process management for orphan detection
sysinfo = "0.30"

# Gemini AI integration dependencies
base64 = "0.22"            # Video encoding for API upload

# Audio capture and transcription dependencies
cpal = "0.15"              # Cross-platform audio I/O
whisper-rs = "0.12"        # Whisper speech-to-text (whisper.cpp bindings)
hound = "3.5"              # WAV file reading/writing

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows-capture = "^1.5"  # Required by scap git branch version

# Note: libspa compatibility issue on Linux
# The libspa 0.8.0 crate (via scap) has API mismatches with newer PipeWire headers
# This is handled by installing compatible PipeWire libraries in the CI workflow
# No patch needed - the system libraries on GitHub Actions should be compatible
